--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "singleQuote": true
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "twitch-m3u8-jeanouina": "^1.2.4"
   }
